[tool.poetry]
name = "ssupervisor"
version = "1.0.5"
description = "Effortlessly run scripts or commands when certain files change."
authors = ["Infinium <infinium-llc@protonamil.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infinium8/Supervisor"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
watchdog = "^2.1.6"
rich = "^10.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
supervisor = 'ssupervisor.Supervisor:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"